Fixed ores generation